# search_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: answers.json  requests.json
include/: ConverterJSON.h  Entry.h  InvertedIndex.h  MainWindow.h  RelativeIndex.h  ResultsModel.h  SearchEngine.h  SearchServer.h
qml/: main.qml
resources/: file002.txt  file003.txt  resources.qrc
src/: ConverterJSON.cpp  InvertedIndex.cpp  MainWindow.cpp  ResultsModel.cpp  SearchEngine.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
